plang/testing/logs/false-incorrect/132/program132.p.p
xvlqB a vA.

dEj Zg ZZl :- zjg (u z4b6 HjQxd yQr).
y9Qy (fYhQ) :- hk9S (O) Gx8Y.

e (cVotu).

ll (WQ) eQ s :- (cnuP AuN Tn UWBf).

ez2L.


z ZEc bA RsLm (MR).


uTO4 (t A jUMxw (fn (VQyNV))) (ihtwV i DZ) (sS (c91 (uK u2PT (lz8R) (s6K)) (I7)) Vs) (V).

qGw (MobF) RI.


? (wc1 (I08) (t4N (vs rnj8 (ABSc) q46ET (Nsqi)) CWb (Qycg)) QZj3b).



